--- a/index.html
+++ b/index.html
@@ -15,19 +15,10 @@
     <link rel="stylesheet"href="style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Wahstapp</title>
+    <title>Whastapp</title>
 </head>
 <body>
-    <!-- <input id="query"  placeholder="Country"onkeyup="getCountry(document.getElementById('query').value)">
-    <input id="queryC" placeholder="Capital" onkeyup="getCapital(document.getElementById('queryC').value)">
-    <div id="output"></div>
-    <footer>
-   
-        All right Reserved &copy;
-        <span id="time"></span>
-    
-    </footer>
-    <script src="site.js"></script> -->
+  
     <div id="page">
         <header id="time">
             Whatsapp API 
